--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,12 @@
 	  <script src="https://code.angularjs.org/1.4.7/angular-route.js" charset="utf-8"></script>
 	  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<link href="/stylesheets/main.css" rel="stylesheet" type="text/css">
-	<script src="/js/app.js"></script>
 	<base href="/">
 </head>
 <body>
 
 	<header>
-		<h1>What should I watch?</h1>
+		<h1>watchListed</h1>
 		<h2>Remind yourself of things you want to watch.</h2>
 	</header>
 	<main>
@@ -22,4 +21,5 @@
 		<p>&copy;2015 Garon Bailey</p>
 	</footer>
 </body>
+	<script src="/js/app.js"></script>
 </html>
