--- a/public/index.html
+++ b/public/index.html
@@ -3,16 +3,17 @@
 <head>
 	<title>What should I watch again?</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js" charset="utf-8"></script>
-	  <script src="https://code.angularjs.org/1.4.7/angular-route.js" charset="utf-8"></script>
+	  <script src="https://code.angularjs.org/1.4.7/angular-route.min.js" charset="utf-8"></script>
 	  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	<link href="/stylesheets/main.css" rel="stylesheet" type="text/css">
+	<link href="stylesheets/main.css" rel="stylesheet" type="text/css">
+	<script src="js/app.js"></script>
 	<base href="/">
 </head>
 <body>
 
 	<header>
-		<h1>watchListed</h1>
-		<h2>Remind yourself of things you want to watch.</h2>
+		<a href="/"><h1>watchListed</h1></a>
+		<p>Remind yourself of things you want to watch.</p>
 	</header>
 	<main>
 		<div ng-view></div>
@@ -21,5 +22,4 @@
 		<p>&copy;2015 Garon Bailey</p>
 	</footer>
 </body>
-	<script src="/js/app.js"></script>
 </html>
