--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js" charset="utf-8"></script>
 	  <script src="https://code.angularjs.org/1.4.7/angular-route.min.js" charset="utf-8"></script>
 	  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	  <link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
 	<link href="stylesheets/main.css" rel="stylesheet" type="text/css">
 	<script src="js/app.js"></script>
 	<base href="/">
