--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,11 @@
 <html lang="en" ng-app="ToWatch">
 <head>
 	<title>What should I watch again?</title>
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js" charset="utf-8"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-cookies.min.js" charset="utf-8"></script>
-	  <script src="https://code.angularjs.org/1.4.7/angular-route.min.js" charset="utf-8"></script>
-	  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	  <link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
+		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js" charset="utf-8"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.6/ngStorage.min.js"></script>
+		<script src="https://code.angularjs.org/1.4.7/angular-route.min.js" charset="utf-8"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+		<link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
 	<link href="stylesheets/main.css" rel="stylesheet" type="text/css">
 	<script src="js/app.js"></script>
 	<base href="/">
