--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="ToWatch">
 <head>
-	<title>What should I watch again?</title>
+	<title>What should I watch?</title>
+		<!-- switch to React? -->
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js" charset="utf-8"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.6/ngStorage.min.js"></script>
 		<script src="https://code.angularjs.org/1.4.7/angular-route.min.js" charset="utf-8"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.6/ngStorage.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 		<link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
 	<link href="stylesheets/main.css" rel="stylesheet" type="text/css">
@@ -15,13 +16,13 @@
 
 	<header>
 		<a href="/"><h1>watchListed</h1></a>
-		<p>Remind yourself of things you want to watch.</p>
+		<p>I've been meaning to watch that . . . </p>
 	</header>
 	<main>
 		<div ng-view></div>
 	</main>
 	<footer>
-		<p>&copy;2015 Garon Bailey</p>
+		<p>&copy;2015-2018 Garon Bailey</p>
 	</footer>
 </body>
 </html>
